update metadata Generated cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Taistelon-tuoksinasta_74343
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Pärsswinen, Hilja
     gutenberg_agent_id: '57455'
     url: http://www.gutenberg.org/2009/agents/57455
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74343#Taistelon-tuoksinasta
 gutenberg_issued: '2024-08-31'
 gutenberg_type: Text
 identifiers:
